# graphai

./: .gitignore  .pre-commit-config.yaml  .pydoc-markdown.yml  Makefile  README.md  diff-config.yaml  pyproject.toml
.github/workflows/: conventional_commits.yml  docs.yml  release.yml  test.yml  triggers_pr.yml
docs/: 00-getting-started.ipynb  01-simple-agent.ipynb  02-streaming.ipynb  03-callback-config.ipynb
docs/get-started/: introduction.md  quickstart.md
docs/guides/: configuration.md
docs/user-guide/: faqs.md  release-notes.md
docs/user-guide/components/: callbacks.md  function-schema.md  graphs.md  nodes.md  state.md
graphai/: __init__.py  callback.py  graph.py  utils.py
graphai/nodes/: __init__.py  base.py
graphai/persistence/: __init__.py  in_memory.py
tests/unit/: test_callback.py  test_execute_many.py  test_function_schema.py  test_graph.py  test_graph_chaining.py  test_graph_parallel.py  test_graph_state.py  test_persistence_in_memory.py  test_visualization.py
