[project]
name = "graphai-lib"
version = "0.0.3"
description = "Not an AI framework"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "semantic-router>=0.1.5",
    "networkx>=3.4.2",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "ruff>=0.1.5",
    "pytest>=8.2.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.7.1",
    "black[jupyter]>=23.12.1,<24.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["graphai"]