[project]
name = "graphai-lib"
version = "0.0.8"
description = "Not an AI framework"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.11.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "ruff>=0.1.5",
    "pytest>=8.2.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.7.1",
    "types-networkx>=3.4.2.20250319",
]
docs = ["pydoc-markdown>=4.8.2 ; python_version < '3.12'"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["graphai", "graphai.nodes"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
